# vsdb

./: .diff_review_tmp.diff  .gitignore  AUDIT-2026-04-14.md  AUDIT-2026-04-25.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  OPTIMIZATION_SUMMARY.md  README.md  change_log.md  rustfmt.toml
.claude/: audit.md  (+1 more)
core/: Cargo.toml  README.md  build.rs  rustfmt.toml
core/benches/: basic.rs  cache_pool.rs  exec.rs  versioned.rs
core/benches/units/: basic_mapx_raw.rs  batch_write.rs  mod.rs  versioned_mapx_raw.rs
core/docs/: api.md
core/src/: lib.rs
core/src/basic/: mod.rs
core/src/basic/mapx_raw/: mod.rs  test.rs
core/src/basic/persistent_btree/: mod.rs  test.rs
core/src/common/: error.rs  mod.rs  namespace.rs  utils.rs
core/src/common/engine/: mmdb.rs  mod.rs  rocksdb.rs
core/src/common/engines/: fjall_backend.rs  mdbx_backend.rs  mod.rs  parity_backend.rs  redb_backend.rs  rocks_backend.rs  rocks_db.rs  sled_backend.rs  sled_db.rs
core/src/versioned/: mod.rs
core/src/versioned/mapx_raw/: backend.rs  mod.rs  test.rs
core/tests/: _scratch_lock_timing.rs  basic_mapx_raw_test.rs  namespace_test.rs  versioned_mapx_raw_test.rs
derive/: Cargo.toml  README.md
derive/src/: lib.rs
strata/: Cargo.toml  README.md
strata/benches/: basic.rs  slot_db.rs  slotdex.rs  thread_overhead_demo.rs  trie_bench.rs  vecdex.rs  versioned.rs
strata/benches/units/: basic_mapx.rs  basic_mapx_ord.rs  batch_vs_normal.rs  concurrent.rs  legacy_budget.rs  mod.rs
strata/docs/: api.md  engine-comparison.md  vecdex.md  versioned.md
strata/src/: lib.rs
strata/src/basic/: mod.rs
strata/src/basic/mapx/: mod.rs  test.rs
strata/src/basic/mapx_ord/: mod.rs  test.rs
strata/src/basic/mapx_ord_rawkey/: mod.rs  test.rs
strata/src/basic/orphan/: mod.rs  test.rs
strata/src/basic/persistent_btree/: insert.rs  iter.rs  mod.rs  nodes.rs  remove.rs  test.rs  types.rs
strata/src/basic_multi_key/mapx_double_key/: mod.rs
strata/src/basic_multi_key/mapx_triple_key/: mod.rs  test.rs
strata/src/common/: dirty_count.rs  ende.rs  error.rs  macros.rs  mod.rs  staged.rs
strata/src/dagmap/: mod.rs
strata/src/dagmap/raw/: mod.rs  test.rs
strata/src/dagmap/rawkey/: mod.rs  test.rs
strata/src/slot_db/: mod.rs  test.rs
strata/src/slotdex/: container.rs  mod.rs  slot_type.rs  test.rs  tier.rs
strata/src/trie/: cache.rs  codec_util.rs  error.rs  mod.rs  nibbles.rs  proof.rs  test.rs
strata/src/trie/mpt/: mod.rs  mutation.rs  proof.rs  query.rs
strata/src/trie/node/: codec.rs  mod.rs
strata/src/trie/smt/: bitpath.rs  cache.rs  codec.rs  mod.rs  mutation.rs  proof.rs  query.rs
strata/src/vecdex/: distance.rs  dynamic.rs  hnsw.rs  mod.rs  test.rs
strata/src/versioned/: diff.rs  handle.rs  map.rs  merge.rs  mod.rs  proof.rs  read.rs  repair.rs  test.rs
strata/tests/: basic_mapx_ord_rawkey_test.rs  basic_mapx_ord_test.rs  basic_mapx_test.rs  basic_multi_key_mapx_raw_test.rs  basic_multi_key_mapx_triple_key_test.rs  basic_orphan_test.rs  batch_api_test.rs  namespace_composites_test.rs
utils/hash_db/: Cargo.toml  Makefile  README.md
utils/hash_db/docs/: api.md
utils/hash_db/src/: lib.rs
utils/slot_db/: Cargo.toml  README.md  rustfmt.toml
utils/slot_db/benches/: 0_slot_db_reverse.rs  0_slot_db_reverse_swap_order.rs  1_slot_db_positive.rs  2_slot_db_reverse.rs
utils/slot_db/docs/: api.md
utils/slot_db/src/: lib.rs  test.rs
utils/trie-db/: Cargo.toml
utils/trie-map/: Cargo.toml
utils/trie_db/: Cargo.toml  LICENSE  Makefile  README.md
utils/trie_db/docs/: api.md
utils/trie_db/src/: cache.rs  config.rs  error.rs  lib.rs  nibbles.rs  substrate_trie.rs  test.rs
utils/trie_db/src/node/: codec.rs  mod.rs
utils/trie_db/src/storage/: mod.rs  vsdb_impl.rs
utils/trie_db/src/trie/: mutation.rs  query.rs
utils/trie_map/: Cargo.toml  README.md
utils/trie_map/src/: lib.rs
wrappers/: Cargo.toml  README.md
wrappers/benches/: basic.rs  bench_main.rs  exec.rs  thread_overhead_demo.rs  thread_spawn_test.rs  versioned.rs
wrappers/benches/benchmarks/: basic_mapx.rs  basic_mapx_raw.rs  basic_vecx.rs  basic_vecx_raw.rs  mod.rs  versioned_mapx_ord_rawkey.rs
wrappers/benches/units/: basic_mapx.rs  basic_mapx_ord.rs  basic_mapx_ord_rawkey.rs  basic_mapx_ord_rawvalue.rs  basic_multi_key_mapx_double_key.rs  basic_multi_key_mapx_raw.rs  basic_multi_key_mapx_rawkey.rs  basic_multi_key_mapx_triple_key.rs  basic_vecx.rs  basic_vecx_raw.rs  batch_vs_normal.rs  concurrent.rs  mod.rs  versioned_mapx.rs  versioned_mapx_ord.rs  versioned_mapx_ord_rawkey.rs  versioned_multi_key_mapx_double_key.rs  versioned_multi_key_mapx_triple_key.rs  versioned_vecx.rs
wrappers/docs/: api.md
wrappers/examples/: blockchain_state.rs  derive_vs.rs  web_server.rs
wrappers/src/: lib.rs
wrappers/src/basic/: mod.rs
wrappers/src/basic/mapx/: mod.rs  test.rs
wrappers/src/basic/mapx_ord/: mod.rs  test.rs
wrappers/src/basic/mapx_ord_rawkey/: mod.rs  test.rs
wrappers/src/basic/mapx_ord_rawvalue/: mod.rs  test.rs
wrappers/src/basic/orphan/: mod.rs  test.rs
wrappers/src/basic/vecx/: mod.rs  test.rs
wrappers/src/basic/vecx_raw/: mod.rs  test.rs
wrappers/src/basic_multi_key/: mod.rs
wrappers/src/basic_multi_key/mapx_double_key/: mod.rs  test.rs
wrappers/src/basic_multi_key/mapx_raw/: mod.rs  test.rs
wrappers/src/basic_multi_key/mapx_rawkey/: mod.rs  test.rs
wrappers/src/basic_multi_key/mapx_triple_key/: mod.rs  test.rs
wrappers/src/common/: ende.rs  macros.rs  mod.rs
wrappers/src/dagmap/: mod.rs
wrappers/src/versioned/: mod.rs
wrappers/tests/: basic_mapx_ord_rawkey_test.rs  basic_mapx_ord_rawvalue_test.rs  basic_mapx_ord_test.rs  basic_mapx_raw_test.rs  basic_mapx_test.rs  basic_multi_key_mapx_double_key_test.rs  basic_multi_key_mapx_raw_test.rs  basic_multi_key_mapx_rawkey_test.rs  basic_multi_key_mapx_triple_key_test.rs  basic_orphan_test.rs  basic_vecx_raw_test.rs  basic_vecx_test.rs  batch_api_test.rs  versioned_mapx_raw_test.rs  versioned_multi_key_mapx_double_key_test.rs  versioned_multi_key_mapx_raw_test.rs  versioned_multi_key_mapx_triple_key_test.rs
(+195 files in other folders)
