[workspace]
members = [
    "core",
    "strata",
]
resolver = "3"

[workspace.dependencies]
ruc = "11.0.0"
thiserror = "2.0"

parking_lot = "0.12.1"

serde = { version = "1.0.136", features = ["derive"] }
postcard = { version = "=1.1.3", features = ["alloc"] }
sha3 = "0.10"

mmdb = "4.0.4"

vsdb_core = { path = "core", version = "14.0.3", default-features = false }

criterion = "0.8"
hex = "0.4"
rand = "0.10"
