[package]
name = "vsdb_core"
version = "10.1.1"
authors = ["hui.fan@mail.ru"]
edition = "2024"
description = "A std-collection-like database"
homepage = "https://github.com/rust-util-collections/vsdb"
repository = "https://github.com/rust-util-collections/vsdb/tree/master/core"
keywords = ["kv", "leveldb", "rocksdb", "std"]
categories = ["database-implementations", "data-structures", "algorithms", "caching"]
license = "MIT"

[dependencies]
ruc = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }

rocksdb = { workspace = true, optional = true }
mmdb = { workspace = true, optional = true }

[features]
default = ["backend_mmdb"]
backend_mmdb = ["mmdb"]
backend_rocksdb = ["rocksdb"]

[dev-dependencies]
serde_cbor_2 = { workspace = true }
hex = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "basic"
harness = false
