[package]
name = "vsdb_core"
version = "13.0.1"
authors = ["hui.fan@mail.ru"]
edition = "2024"
description = "A std-collection-like database"
homepage = "https://github.com/rust-util-collections/vsdb"
repository = "https://github.com/rust-util-collections/vsdb/tree/master/core"
keywords = ["kv", "leveldb", "lsm", "std"]
categories = ["database-implementations", "data-structures", "algorithms", "caching"]
license = "MIT"

[dependencies]
ruc = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }

mmdb = { workspace = true }

[features]
default = []

[dev-dependencies]
postcard = { workspace = true }
hex = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "basic"
harness = false
