[package]
name = "vsdb_core"
version = "16.2.0"
authors = ["hui.fan@mail.ru"]
edition = "2024"
description = "A std-collection-like database"
homepage = "https://github.com/rust-util-collections/vsdb"
repository = "https://github.com/rust-util-collections/vsdb/tree/master/core"
keywords = ["kv", "leveldb", "lsm", "std"]
categories = ["database-implementations", "data-structures", "algorithms", "caching"]
license = "MIT"

[dependencies]
ruc = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
postcard = { workspace = true }

mmdb = { workspace = true }

[features]
default = []

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "basic"
harness = false
