[package]
name = "vsdb_derive"
version = "0.42.0"
authors = ["dafanhui@163.com", "hui.fan@mail.ru"]
edition = "2021"
description = "Some procedure macro implementations for vsdb."
homepage = "https://github.com/rust-util-collections/vsdb"
repository = "https://github.com/rust-util-collections/vsdb/tree/master/derive"
keywords = ["git", "leveldb", "rocksdb", "version", "vcs"]
categories = ["database-implementations", "data-structures", "algorithms", "caching"]
license = "GPL-3.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
