[package]
name = "vsdb"
version = "10.0.0"
authors = ["hui.fan@mail.ru"]
edition = "2024"
description = "A std-collection-like database"
homepage = "https://github.com/rust-util-collections/vsdb"
repository = "https://github.com/rust-util-collections/vsdb/tree/master/strata"
keywords = ["kv", "leveldb", "rocksdb", "std"]
categories = ["database-implementations", "data-structures", "algorithms", "caching"]
license = "MIT"

[package.metadata.docs.rs]
# features = []

[dependencies]
serde = { workspace = true }
parking_lot = { workspace = true }

serde_cbor_2 = { workspace = true }

ruc = { workspace = true }
vsdb_core = { workspace = true }

sha3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
hex = { workspace = true }
criterion = { workspace = true }

[features]
default = ["backend_rocksdb"]

backend_rocksdb = ["vsdb_core/backend_rocksdb"]
backend_mmdb = ["vsdb_core/backend_mmdb"]

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "versioned"
harness = false

[[bench]]
name = "slotdex"
harness = false

[[bench]]
name = "trie_bench"
harness = false
