[package]
name = "vsdb"
version = "12.2.0"
authors = ["hui.fan@mail.ru"]
edition = "2024"
description = "A std-collection-like database"
homepage = "https://github.com/rust-util-collections/vsdb"
repository = "https://github.com/rust-util-collections/vsdb/tree/master/strata"
keywords = ["git", "vcs", "leveldb", "lsm", "database"]
categories = ["database-implementations", "data-structures", "algorithms", "caching"]
license = "MIT"

[package.metadata.docs.rs]
# features = []

[dependencies]
serde = { workspace = true }
parking_lot = { workspace = true }

postcard = { workspace = true }

ruc = { workspace = true }
vsdb_core = { workspace = true }

sha3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
hex = { workspace = true }
criterion = { workspace = true }

[features]
default = []

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "versioned"
harness = false

[[bench]]
name = "slotdex"
harness = false

[[bench]]
name = "trie_bench"
harness = false
