[package]
name = "vsdb"
version = "3.0.0"
authors = ["hui.fan@mail.ru"]
edition = "2021"
description = "A std-collection-like database"
homepage = "https://github.com/rust-util-collections/vsdb"
repository = "https://github.com/rust-util-collections/vsdb/tree/master/wrappers"
keywords = ["kv", "leveldb", "rocksdb", "std"]
categories = ["database-implementations", "data-structures", "algorithms", "caching"]
license = "GPL-3.0"

[package.metadata.docs.rs]
# features = []

[dependencies]
serde = { workspace = true }
parking_lot = { workspace = true }

msgpack = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

ruc = { workspace = true }
vsdb_core = { workspace = true }

[dev-dependencies]
hex = "0.4.3"
criterion = "0.5.1"
rand = "0.8.5"

[features]
default = ["sled_backend", "compress", "msgpack_codec"]

parity_backend = ["vsdb_core/parity_backend"]
rocks_backend = ["vsdb_core/rocks_backend"]
sled_backend = ["vsdb_core/sled_backend"]
compress = ["vsdb_core/compress"]

serde_ende = []
msgpack_codec = ["serde_ende", "msgpack"]
json_codec = ["serde_ende", "serde_json"]

# [[bench]]
# name = "basic"
# harness = false

# [[bench]]
# name = "versioned"
# harness = false
