[package]
name = "vsdb"
version = "8.1.1"
authors = ["hui.fan@mail.ru"]
edition = "2024"
description = "A std-collection-like database"
homepage = "https://github.com/rust-util-collections/vsdb"
repository = "https://github.com/rust-util-collections/vsdb/tree/master/wrappers"
keywords = ["kv", "leveldb", "rocksdb", "std"]
categories = ["database-implementations", "data-structures", "algorithms", "caching"]
license = "GPL-3.0"

[package.metadata.docs.rs]
# features = []

[dependencies]
serde = { workspace = true }
parking_lot = { workspace = true }

msgpack = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_cbor_2 = { workspace = true, optional = true }

ruc = { workspace = true }
vsdb_core = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
hex = "0.4"
criterion = "0.8"

[features]
default = ["msgpack_codec"]

serde_ende = []
msgpack_codec = ["serde_ende", "msgpack"]
json_codec = ["serde_ende", "serde_json"]
cbor_codec = ["serde_ende", "serde_cbor_2"]

[[bench]]
name = "basic"
harness = false

# [[bench]]
# name = "versioned"
# harness = false
