[package]
name = "vsdb_hash_db"
version = "1.0.0"
edition = "2021"
keywords = ["mpt", "trie", "database", "blockchain"]
license = "MIT"
authors = ["hui.fan@mail.ru"]
description = "An implementation of the `hash_db::HashDB` trait"
homepage = "https://github.com/rust-util-collections/vsdb"
repository = "https://github.com/rust-util-collections/vsdb"

[dependencies]
hash-db = { workspace = true }
keccak-hasher = { workspace = true }

serde = { workspace = true }
msgpack = { workspace = true }

ruc = { workspace = true }
vsdb = { workspace = true }

[features]
default = ["rocks_backend","msgpack_codec"]

rocks_backend = ["vsdb/rocks_backend"]
parity_backend = ["vsdb/parity_backend"]

json_codec = ["vsdb/json_codec"]
msgpack_codec = ["vsdb/msgpack_codec"]
