[package]
name = "vsdb_hash_db"
version = "3.0.0"
edition = "2021"
keywords = ["mpt", "trie", "database", "blockchain"]
license = "MIT"
authors = ["hui.fan@mail.ru"]
description = "An implementation of the `hash_db::HashDB` trait"
homepage = "https://github.com/rust-util-collections/vsdb"
repository = "https://github.com/rust-util-collections/vsdb"

[dependencies]
hash-db = { workspace = true }
keccak-hasher = { workspace = true }

serde = { workspace = true }
msgpack = { workspace = true }

ruc = { workspace = true }
vsdb = { workspace = true }

[features]
default = ["sled_backend","msgpack_codec"]

parity_backend = ["vsdb/parity_backend"]
rocks_backend = ["vsdb/rocks_backend"]
sled_backend = ["vsdb/sled_backend"]
json_codec = ["vsdb/json_codec"]
msgpack_codec = ["vsdb/msgpack_codec"]
