[package]
name = "vsdb_slot_db"
version = "5.0.0"
edition = "2024"
keywords = ["index", "cache", "timestamp", "slot", "database"]
license = "MIT"
authors = ["hui.fan@mail.ru"]
description = "A skip-list like index cache"
homepage = "https://github.com/rust-util-collections/vsdb"
repository = "https://github.com/rust-util-collections/vsdb"

[dependencies]
ruc = { workspace = true }
vsdb = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = "0.7.0"
rand = { workspace = true }

[features]
default = ["redb_backend", "compress", "msgpack_codec"]

redb_backend = ["vsdb/redb_backend"]
rocks_backend = ["vsdb/rocks_backend"]

compress = ["vsdb/compress"]

json_codec = ["vsdb/json_codec"]
msgpack_codec = ["vsdb/msgpack_codec"]

[[bench]]
name = "0_slot_db_reverse_swap_order"
harness = false

[[bench]]
name = "1_slot_db_positive"
harness = false

[[bench]]
name = "2_slot_db_reverse"
harness = false
