[package]
name = "vsdb-trie-db"
version = "0.1.0"
edition = "2021"
keywords = ["mpt", "trie", "database", "blockchain"]
license = "MIT"
authors = ["hui.fan@mail.ru"]
description = "An out-of-box wraper of the `trie_db` crate"
homepage = "https://github.com/rust-util-collections/vsdb"
repository = "https://github.com/rust-util-collections/vsdb"

[dependencies]
serde = { workspace = true }
sp-trie = { workspace = true }

ruc = { workspace = true }
vsdb-hash-db = { workspace = true }

[features]
default = ["sled_engine", "bcs_codec"]

sled_engine = ["vsdb-hash-db/sled_engine"]
rocks_engine = ["vsdb-hash-db/rocks_engine"]

bcs_codec = ["vsdb-hash-db/bcs_codec"]
json_codec = ["vsdb-hash-db/json_codec"]
msgpack_codec = ["vsdb-hash-db/msgpack_codec"]
