[package]
name = "vsdb-trie-map"
version = "0.1.0"
edition = "2021"
keywords = ["mpt", "trie", "database", "blockchain"]
license = "MIT"
authors = ["hui.fan@mail.ru"]
description = "Various easy-to-use KV-map structures based of the `vsdb-trie-db` crate"
homepage = "https://github.com/rust-util-collections/vsdb"
repository = "https://github.com/rust-util-collections/vsdb"

[dependencies]
ruc = { workspace = true }
serde = { workspace = true }
vsdb-trie-db = { workspace = true }

[features]
default = ["sled_engine", "bcs_codec"]

sled_engine = ["vsdb-trie-db/sled_engine"]
rocks_engine = ["vsdb-trie-db/rocks_engine"]

bcs_codec = ["vsdb-trie-db/bcs_codec"]
json_codec = ["vsdb-trie-db/json_codec"]
msgpack_codec = ["vsdb-trie-db/msgpack_codec"]
