[package]
name = "vsdb_trie_db"
version = "9.0.0"
edition = "2024"
keywords = ["mpt", "trie", "merkle", "blockchain"]
license = "MIT"
authors = ["hui.fan@mail.ru"]
description = "A lightweight, stateless Merkle Patricia Trie (MPT) implementation"
homepage = "https://github.com/rust-util-collections/vsdb"
repository = "https://github.com/rust-util-collections/vsdb"

[dependencies]
sha3 = { workspace = true }
thiserror = { workspace = true }
